--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,15 @@
 [flake8]
 max-line-length = 99
 no-isort-config = true
+# per-file-ignores adds a ridiculously annoying critical
+# error code when an error is per-file ignored unnecessarily
+ignore = X100
 
 # Mocked returns are going to look disgusting, so allow crazy
 # line lengths and screwy line alignment
 per-file-ignores =
   tests/search_mocks.py:E128,E501
+  pygetty/formatters.py:C815
 
 [tool:pytest]
 flake8-max-line-length = 99
