--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,4 @@ author = "Josh Klar"
 author-email = "josh@lumen5.com"
 home-page = "https://github.com/Lumen5/pygetty"
 classifiers = ["License :: OSI Approved :: ISC License (ISCL)"]
-requires = ["requests~=2.19", "future", "pendulum~=2.0"]
+requires = ["requests>=2.20.0", "future", "pendulum~=2.0"]
