Trying to fix tests.

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ no-isort-config = true
 # per-file-ignores adds a ridiculously annoying critical
 # error code when an error is per-file ignored unnecessarily
 ignore = X100
+select = Q0
 
 # Mocked returns are going to look disgusting, so allow crazy
 # line lengths and screwy line alignment
